[package]
name = "bellperson-sha512"
version = "0.2.0"
edition = "2021"
authors = ["Varun Thakore <vrnthakore@gmail.com>"]
description = "circuit for SHA-512 hash function"
documentation = "https://docs.rs/bellperson-sha512"
homepage = "https://github.com/varunthakore/bellperson-sha512"
license-file = "LICENSE"
repository = "https://github.com/varunthakore/bellperson-sha512"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = "0.25.0"
blstrs = "0.7.0"
ff = "0.13.0"
hex-literal = "0.4.1"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
sha2 = "0.10.6"
